--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -73,12 +73,7 @@ enabled = true
 # in emails.
 site_url = "http://192.168.1.97:5173/"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = [
-  "http://192.168.1.97:5173/auth-callback.html",
-  "http://100.110.86.5:5173/auth-callback.html",
-  "https://192.168.1.97:5173/auth-callback.html",
-  "https://100.110.86.5:5173/auth-callback.html"
-]
+additional_redirect_urls = ["https://192.168.1.97:5173/auth-callback.html"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # If disabled, the refresh token will never expire.
