--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -46,7 +46,7 @@ enabled = true
 # max_header_length = 4096
 
 [studio]
-enabled = true
+enabled = false
 # Port to use for Supabase Studio.
 port = 54323
 # External URL of the API server that frontend connects to.
@@ -55,7 +55,7 @@ api_url = "http://100.110.86.5"
 # Email testing server. Emails sent with the local dev setup are not actually sent - rather, they
 # are monitored, and you can view the emails that would have been sent from the web interface.
 [inbucket]
-enabled = true
+enabled = false
 # Port to use for the email testing server web interface.
 port = 54324
 # Uncomment to expose additional ports for testing user applications that send emails.
@@ -83,6 +83,10 @@ enable_refresh_token_rotation = true
 refresh_token_reuse_interval = 10
 # Allow/disallow new user signups to your project.
 enable_signup = true
+
+# Raise email rate limit when using custom SMTP (default is 2/hour; causes "rate limit exceeded")
+[auth.rate_limit]
+email_sent = 30
 
 [auth.email]
 # Allow/disallow new user signups via email to your project.
